--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,6 @@
 name: 42
 on: push
-jobs1:
+jobs:
   test:
     runs-on: ubuntu-latest
     container: golang:1.22
@@ -11,7 +11,6 @@ jobs1:
       - name: Vet
         run: |
           go vet ./...
-jobs2:
   deploy:
     name: Push Docker 
     runs-on: ubuntu-latest
