--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -1,25 +1,44 @@
 name: GoGoGo
 
 on:
-  push:
-    branches: [ "main" ]
   pull_request:
-    branches: [ "main" ]
+    branches: 
+      - main
 
 jobs:
-
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v4
-
-    - name: Set up Go
-      uses: actions/setup-go@v4
+    - name: inst Go
+      uses: actions/setup-go@v5
       with:
-        go-version: '1.22'
-
+        go-version: '1.23'
+    - name: chec
+      uses: actions/checkout@v4
     - name: Build
       run: go build -v ./...
-
     - name: Test
       run: go test -v ./...
+      
+  lint:
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+    - name: inst Go
+      uses: actions/setup-go@v5
+    - name: chec
+      uses: actions/checkout@v4
+    - name: lint
+      run: go vet -v ./...
+
+  test: 
+  needs: build
+  runs-on: ubuntu-latest
+    steps:
+    - name: inst Go
+      uses: actions/setup-go@v5
+    - name: chec
+      uses: actions/checkout@v4
+    - name: lint
+      run: go vet -v ./...
+      
